[package]
name = "wf_market"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version =  "1.45.1", features = ["full"] }
serde = {version =  "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12.19", features = ["json"] }
rand = "0.9.1"

[dev-dependencies]
dotenv = "0.15"
