[package]
name = "wf_market"
version = "0.1.1"
edition = "2024"
description = "A small Rust library to interact with Warframe Market APIs"
repository = "https://github.com/KibbeWater/wf-market"
license = "GPL-3.0-only"
homepage = "https://github.com/KibbeWater/wf-market"
readme = "README.md"
authors = ["KibbeWater <35224538+KibbeWater@users.noreply.github.com>"]
keywords = ["warframe", "market"]

[dependencies]
tokio = {version =  "1.45.1", features = ["full"] }
serde = {version =  "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12.19", features = ["json"] }
rand = "0.9.1"

[dev-dependencies]
dotenv = "0.15"
